syntax = "proto3";

package com.cjt.proto;

option java_package = "com.cjt.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

service StudentService{
     rpc GetRealNameByUsername(MyRequest) returns (MyResponse) { }
}

message MyRequest {
    string username = 1;
}

message MyResponse{
    string realname = 2;
}


//gradle generateProto 用此命令编译
